[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "solver"
version = "0.0.1"
description = "A weird way of solving sudoku puzzles (mis)using hypothesis and property based testing"
dependencies = [
    "hypothesis ==6.79.3",
    "ipdb ==0.13.13",
]

[project.scripts]
solver = "solver.main:main"

[project.optional-dependencies]
dev = [
    "pytest ==7.3.1",
    "black ==23.3.0",
    "ruff ==0.0.272",
    "mypy ==1.3.0",
]
